playlist
get other top tracks
create playlist
fill playlist with top tracks
